--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">ALiAS</string>
     <string name="action_settings">Settings</string>
     <string name="alias_full_name">Amity Linux Assistance Sapience</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
