--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">ALias</string>
+    <string name="app_name">ALiAS</string>
     <string name="alias_full_name">Amity Linux Assistance Sapience</string>
     <string name="action_settings">Settings</string>
-    <string name="fragment_about_text">About</string>
-    <string name="fragment_event_text">event</string>
-    <string name="fragment_webinar_text">webinar</string>
-    <string name="fragment_community_text">community</string>
-</resources>
+<string name="fragment_about_text">About</string>
+<string name="fragment_event_text">event</string>
+<string name="fragment_webinar_text">webinar</string>
+<string name="fragment_community_text">community</string>
+    </resources>
